# codexa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  index.md  roadmap.md  scope.md
docs/concepts/: navigation-and-links.md
docs/contracts/: content-contract-v1.md
docs/guides/: quick-start.md
docs/reference/: frontmatter.md
examples/paragraph/: document.md
scripts/: install-scaffold.sh  release-0.0.1.sh
src/: compiler.rs  lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/notion/: mod.rs  model.rs
src/adapter/web/: mod.rs  model.rs
src/model/: block.rs  document.rs  link.rs  metadata.rs  mod.rs
src/parser/: frontmatter.rs  links.rs  markdown.rs  mod.rs
tests/: cli.rs  frontmatter.rs  links.rs  markdown.rs  notion_adapter.rs  web_adapter.rs
tests/fixtures/runbooks/: lureva-lightroom-handoff.fixture  lureva-lightroom-handoff.md
